--- a/package.json
+++ b/package.json
@@ -10,18 +10,31 @@
   "scripts": {
     "start": "micro ./build/index.js",
     "dev": "node -r ts-node/register node_modules/.bin/micro-dev ./src/index.ts",
-    "build": "tsc -b"
+    "build": "tsc -b",
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@graphql-modules/core": "^0.7.12",
+    "apollo-datasource-rest": "^0.6.4",
     "apollo-server-micro": "^2.9.3",
+    "base-64": "^0.1.0",
     "graphql": "^14.5.6",
-    "micro": "^9.3.4"
+    "micro": "^9.3.4",
+    "node-fetch": "^2.6.0",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.7.0",
+    "@graphql-codegen/introspection": "^1.7.0",
+    "@graphql-codegen/typescript": "1.7.0",
+    "@graphql-codegen/typescript-document-nodes": "1.7.0",
+    "@graphql-codegen/typescript-resolvers": "1.7.0",
+    "@types/base-64": "^0.1.3",
     "@types/graphql": "^14.5.0",
     "@types/jest": "^24.0.18",
     "@types/micro": "^7.3.3",
     "@types/node": "^12.7.5",
+    "@types/node-fetch": "^2.5.0",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.3.0",
     "eslint": "^6.4.0",
