--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "resolveJsonModule": true,
     "strict": true,
     "sourceMap": true,
-    "target": "esnext"
+    "target": "esnext",
+    "experimentalDecorators": true
   },
   "include": ["./src/**/*"],
   "exclude": ["node_modules"]
