--- a/codegen.yml
+++ b/codegen.yml
@@ -1,6 +1,9 @@
 overwrite: true
 schema: 'http://localhost:3000'
 documents: null
+config:
+  scalars:
+    DateTime: string
 generates:
   src/generated/graphql.ts:
     plugins:
