--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "toggl-graphql-server",
   "version": "0.1.0",
-  "description": "GraphQL API for [toggl](https://toggl.com) rest api. [ENDPOINT](https://toggl-graphql-server.vadistic.now.sh) [DOCS](https://toggl-graphql-server.vadistic.now.sh/docs/)",
+  "description": "GraphQL API for toggl.com",
   "main": "src/index.ts",
   "repository": "https://github.com/vadistic/toggl-graphql-server",
   "homepage": "https://toggl-graphql-server.vadistic.now.sh",
