--- a/codegen.yml
+++ b/codegen.yml
@@ -1,6 +1,8 @@
 overwrite: true
-schema: 'http://localhost:3000'
+schema: src/typedefs.ts
 documents: null
+require:
+  - 'ts-node/register/transpile-only'
 config:
   scalars:
     DateTime: string
@@ -9,7 +11,6 @@ generates:
     plugins:
       - 'typescript'
       - 'typescript-resolvers'
-      - 'typescript-document-nodes'
-  src/generated//graphql.schema.json:
-    plugins:
-      - 'introspection'
+  # src/generated/graphql.schema.json:
+  #   plugins:
+  #     - 'introspection'
