--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toggl-graphql-server",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "GraphQL API for toggl.com",
   "main": "src/index.ts",
   "repository": "https://github.com/vadistic/toggl-graphql-server",
@@ -9,47 +9,45 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "micro ./build/index.js",
-    "dev": "ts-node -T --log-error node_modules/.bin/micro-dev ./src/index.ts",
+    "start": "node ./build/main.js",
+    "dev": "tsc-watch -b ./tsconfig.json --onSuccess \"node ./build/main.js\"",
     "build": "tsc -b",
     "gen:doc": "graphdoc --force -e http://localhost:3000 -o ./docs",
     "gen:gql": "graphql-codegen --config codegen.yml",
-    "gen": "yarn gen:doc && yarn gen:gql"
+    "gen": "yarn gen:doc && yarn gen:gql",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint src/**/*.ts"
   },
   "dependencies": {
-    "@graphql-modules/core": "^0.7.12",
-    "apollo-datasource-rest": "^0.6.4",
-    "apollo-server-micro": "^2.9.3",
+    "@now/node": "^1.4.1",
+    "apollo-datasource-rest": "^0.8.0",
+    "apollo-server-express": "^2.11.0",
     "base-64": "^0.1.0",
-    "graphql": "^14.5.6",
-    "micro": "^9.3.4",
+    "express": "^4.17.1",
+    "graphql": "^14.6.0",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@2fd/graphdoc": "^2.4.0",
-    "@graphql-codegen/cli": "^1.7.0",
-    "@graphql-codegen/introspection": "^1.7.0",
-    "@graphql-codegen/typescript": "1.7.0",
-    "@graphql-codegen/typescript-document-nodes": "1.7.0",
-    "@graphql-codegen/typescript-resolvers": "1.7.0",
+    "@graphql-codegen/cli": "^1.13.0",
+    "@graphql-codegen/introspection": "^1.13.0",
+    "@graphql-codegen/typescript": "1.13.0",
+    "@graphql-codegen/typescript-resolvers": "1.13.0",
     "@types/base-64": "^0.1.3",
-    "@types/graphql": "^14.5.0",
-    "@types/jest": "^24.0.18",
-    "@types/micro": "^7.3.3",
-    "@types/node": "^12.7.5",
-    "@typescript-eslint/eslint-plugin": "^2.3.0",
-    "@typescript-eslint/parser": "^2.3.0",
-    "eslint": "^6.4.0",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "jest": "^24.9.0",
-    "micro-dev": "^3.0.0",
-    "prettier": "^1.18.2",
-    "ts-jest": "^24.1.0",
-    "ts-node": "^8.4.1",
-    "typescript": "^3.6.3"
-  },
-  "engines": {
-    "node": "10.x || 12.x"
+    "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.1",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
+    "@vadistic/eslint-config-node": "^0.1.8",
+    "@vadistic/prettier-config": "^0.1.8",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^25.1.0",
+    "prettier": "^1.19.1",
+    "ts-jest": "^25.2.1",
+    "ts-node": "^8.6.2",
+    "tsc-watch": "^4.2.3",
+    "typescript": "^3.8.3"
   }
 }
