--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "start": "node ./build/main.js",
     "dev": "tsc-watch -b ./tsconfig.json --onSuccess \"node ./build/main.js\"",
     "build": "tsc -b",
-    "now-build": "yarn gen:doc",
-    "gen:doc": "graphdoc --force --schema-file src/generated/schema.json -o ./public/docs -f",
+    "gen:doc": "graphdoc --force -s src/generated/schema.json -o public/docs -f",
     "gen:gql": "graphql-codegen --config codegen.yml",
     "gen": "yarn gen:gql && yarn gen:doc",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint src/**/*.ts"
+    "lint": "eslint src/**/*.ts",
+    "deploy": "yarn gen && now deploy --prod && now rm toggl-graphql-server --safe --yes"
   },
   "dependencies": {
     "@now/node": "^1.4.1",
